@@ -1,0 +1,4 @@
+#!/usr/bin/env ruby
+
+require '<%= project_name %>'
+<%= project_module %>::Application.new.run(ARGV)
